package com.wsr.phase

import com.wsr.board.Board

class TigerPhase(private val board: Board)
