@startuml

class BaghChal {
  board: Board
  numOfKilledGoat: Int
  numOfPlacedGoat: Int
  numOfTrappedTiger: Int
}

class GoatPhase.Place {
  -baghChal: BaghChal
  place(coordinate: Coordinate): BaghChal
}
BaghChal <|-- GoatPhase.Place

class GoatPhase.Move {
  -baghChal: BaghChal
}
BaghChal <|-- GoatPhase.Move

class TigerPhase {
  -baghChal: BaghChal
}
BaghChal <|-- TigerPhase

class Complete
BaghChal <|-- Complete

@enduml